methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:2: error: value c is not a member of object java.awt.Color
  setCouleurBrosse(Color.c)
                         ^